@@ -6002,6 +6002,8 @@ XSTART YSTART are the relative position for the first page in a sheet.")
   ;; initialize page dimensions
   (ps-get-page-dimensions)
   ;; final check
+  (unless (listp ps-lpr-switches)
+    (error "`ps-lpr-switches' value should be a list."))
   (and ps-color-p
        (equal ps-default-background ps-default-foreground)
        (error
@@ -6843,9 +6845,7 @@ If FACE is not a valid face name, use default face."
 				    (and (boundp 'printer-name)
 					 (symbol-value 'printer-name))))
 	       (ps-lpr-switches
-		(append (if (listp ps-lpr-switches)
-			    ps-lpr-switches
-			  (list ps-lpr-switches))
+		(append ps-lpr-switches
 			(and (stringp ps-printer-name)
 			     (string< "" ps-printer-name)
 			     (list (concat
